Fixed textbox stuff + dae generation

--- a/ElectricalPowerSystems/Help/help.html
+++ b/ElectricalPowerSystems/Help/help.html
@@ -58,7 +58,7 @@
                 <span class="type">string</span> node2,
                 <span class="type">complex</span> Z)
             </div>
-            <div>присоединить комплексное сопротивление к узлам node1 и node2 с имендансом Z</div>
+            <div>присоединить комплексное сопротивление к узлам node1 и node2 с импендансом Z</div>
         </li>
         <li>
             <div>
@@ -67,7 +67,7 @@
                 <span class="type">float</span> R,
                 <span class="type">float</span> X)
             </div>
-            <div>присоединить комплексное сопротивление к узлам node1 и node2 с имендансом R + jX</div>
+            <div>присоединить комплексное сопротивление к узлам node1 и node2 с импендансом R + jX</div>
         </li>
         <li>
             <div>
