--- a/ElectricalPowerSystems/Help/help.html
+++ b/ElectricalPowerSystems/Help/help.html
@@ -742,6 +742,18 @@
                 </div>
                 <div>получить комплексно-сопряжённое значение</div>
             </li>
+            <li>
+                <div>
+                    <span class="type">void</span> <span class="function">print</span>(<span class="type">any</span> value,...)
+                </div>
+                <div>напечатать строку из аргументов функции в окне вывода</div>
+            </li>
+            <li>
+                <div>
+                    <span class="type">string</span> <span class="function">import</span>(<span class="type">string</span> filepath)
+                </div>
+                <div>импортировать текст файла filepath в виде строки</div>
+            </li>
         </ul>
     </div>
     <div class="header">
